--- a/index.html
+++ b/index.html
@@ -29,6 +29,25 @@
             text-align: center;
         }
 
+        .alunos {
+            margin-bottom: 20px;
+            background-color: #1e1e1e;
+            padding: 15px;
+            border-radius: 5px;
+            border: 1px solid #4a90e2;
+            text-align: center;
+        }
+
+        .aluno {
+            margin: 5px 0;
+            color: #e0e0e0;
+        }
+
+        .nome {
+            font-weight: bold;
+            color: #4a90e2;
+        }
+
         .assunto {
             font-size: 18px;
             color: #4a90e2;
@@ -80,13 +99,26 @@
 <body>
 
     <div class="container">
+        
+        <!-- Seção de Alunos -->
+        <div class="alunos">
+            <h2>Alunos - Grupo 07</h2>
+            <p class="aluno">Camila da Rocha Sangermano - RA: 125.111.350.680</p>
+            <p class="aluno">Gabriel Peres - RA: 12523133369</p>
+            <p class="aluno">Jéssica Mariane Vieira Nascimento - RA: 820284508</p>
+            <p class="aluno">José Eduardo De Carvalho - RA: 1252227326</p>
+            <p class="aluno">Mírian Cris Marquês de Lima - RA: 122322123</p>
+            <p class="aluno">Natalí Stoian Silva - RA: 125.111.359.372</p>
+            <p class="aluno">Rodolfo Ariel Saire Lucas - RA: 1252227931</p>
+        </div>
+
         <!-- Título Principal -->
         <h1>Atividade A3 - Inteligência Artificial e Tecnologia</h1>
 
         <!-- Instruções -->
         <div class="instrucoes">
             <p>As respostas devem ser encaminhadas para o meu e-mail: <strong>mmarilete.severo@gmail.com</strong>, com o assunto indicado abaixo e o número do Grupo da A3.</p>
-            <p><span class="assunto">Assunto do email:</span> Turma 5ª feira – Grupo _____</p>
+            <p><span class="assunto">Assunto do email:</span> Turma 5ª feira – Grupo 07</p>
         </div>
 
         <!-- Perguntas -->
