--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
         <ol class="perguntas">
             <li class="pergunta">
                 <span class="num-pergunta">1.</span> O que define a inteligência artificial e quais são algumas tarefas comuns que ela pode realizar?
+                <div class="resposta">
+                    A inteligência artificial é um sistema de computador capaz de realizar tarefas que poderiam ser feitas por humanos, inclusive atividades que podem ser chatas, difíceis e repetitivas, porém que a IA consegue fazer em questões de segundos, agindo como se fossem humanos a realizando. Exemplos disso são o reconhecimento de voz, tradução de idiomas, robôs que fazem tarefas domésticas de limpeza e muito mais, desde atividades mais simples como as citadas até algumas mais complexas, como dirigir um carro, conforme estudos que vêm sendo realizados.
+                </div>
             </li>
             <li class="pergunta">
                 <span class="num-pergunta">2.</span> Como os limpadores robóticos ilustram as aplicações práticas da IA no dia a dia?
@@ -134,6 +137,9 @@
             </li>
             <li class="pergunta">
                 <span class="num-pergunta">4.</span> Quais são os potenciais benefícios econômicos da adoção generalizada de carros autônomos?
+                <div class="resposta">
+                    Com a utilização de carros autônomos poderíamos considerar que haveria uma redução de gastos com empregos onde teria que haver uma pessoa a dirigir e transportar mercadorias, e como cito, o tempo que levaria para que essa mercadoria chegasse ao seu destino seria menor, pois não precisaria parar para descansar, tornando a viagem mais rápida. Em relação às pessoas no seu dia a dia, poderiam utilizar o seu tempo de viagem com o seu carro autônomo, realizando uma reunião de trabalho, otimizando seu tempo.
+                </div>
             </li>
             <li class="pergunta">
                 <span class="num-pergunta">5.</span> Como os carros autônomos podem impactar indivíduos com deficiência?
@@ -143,6 +149,9 @@
             </li>
             <li class="pergunta">
                 <span class="num-pergunta">6.</span> Quais são as principais preocupações relacionadas à segurança e responsabilidade legal no contexto dos carros autônomos?
+                <div class="resposta">
+                    Uma das preocupações que deve ser levada em conta sobre os carros autônomos é que, por se tratar de uma tecnologia, possíveis invasões cibernéticas poderiam afetar e acarretar danos irreversíveis. Por exemplo, se em uma invasão ao sistema alguém tomasse o controle, isso poderia causar um acidente. Nesse caso, quem seria o responsável? Acreditamos que as ferramentas tecnológicas vieram para melhorar a qualidade de vida, mas ainda há muito a se pensar sobre quem seria responsável por possíveis erros. Há um longo caminho a percorrer na discussão dos impactos que os possíveis erros poderiam causar à sociedade e ponderar sobre quem seria os responsáveis para que esse meio não se torne uma "terra sem lei".
+                </div>
             </li>
             <li class="pergunta">
                 <span class="num-pergunta">7.</span> De que maneira a imagem holográfica melhora os procedimentos cirúrgicos?
