--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <li class="pergunta">
                 <span class="num-pergunta">1.</span> O que define a inteligência artificial e quais são algumas tarefas comuns que ela pode realizar?
                 <div class="resposta">
-                    A inteligência artificial é um sistema de computador capaz de realizar tarefas que poderiam ser feitas por humanos, inclusive atividades que podem ser chatas, difíceis e repetitivas, porém que a IA consegue fazer em questões de segundos, agindo como se fossem humanos a realizando. Exemplos disso são o reconhecimento de voz, tradução de idiomas, robôs que fazem tarefas domésticas de limpeza e muito mais, desde atividades mais simples como as citadas até algumas mais complexas, como dirigir um carro, conforme estudos que vêm sendo realizados.
+                    A inteligência artificial é um sistema de computador capaz de realizar tarefas que poderiam ser feitas por humanos, inclusive atividades que podem ser chatas, difíceis e repetitivas, porém que a IA consegue fazer em questões de segundos, agindo como se fossem humanos realizando. Exemplos disso são o reconhecimento de voz, tradução de idiomas, robôs que fazem tarefas domésticas de limpeza e muito mais, desde atividades mais simples como as citadas até algumas mais complexas, como dirigir um carro, conforme estudos que vêm sendo realizados.
                 </div>
             </li>
             <li class="pergunta">
@@ -138,7 +138,7 @@
             <li class="pergunta">
                 <span class="num-pergunta">4.</span> Quais são os potenciais benefícios econômicos da adoção generalizada de carros autônomos?
                 <div class="resposta">
-                    Com a utilização de carros autônomos poderíamos considerar que haveria uma redução de gastos com empregos onde teria que haver uma pessoa a dirigir e transportar mercadorias, e como cito, o tempo que levaria para que essa mercadoria chegasse ao seu destino seria menor, pois não precisaria parar para descansar, tornando a viagem mais rápida. Em relação às pessoas no seu dia a dia, poderiam utilizar o seu tempo de viagem com o seu carro autônomo, realizando uma reunião de trabalho, otimizando seu tempo.
+                    Com a utilização de carros autônomos, poderíamos considerar que haveria uma redução de gastos com empregos onde teria que haver uma pessoa a dirigir e transportar mercadorias. Além disso, o tempo que levaria para que essa mercadoria chegasse ao seu destino seria menor, pois não precisaria parar para descansar, tornando a viagem mais rápida. Em relação às pessoas no seu dia a dia, poderiam utilizar o seu tempo de viagem com o seu carro autônomo realizando uma reunião de trabalho, otimizando seu tempo.
                 </div>
             </li>
             <li class="pergunta">
@@ -150,7 +150,7 @@
             <li class="pergunta">
                 <span class="num-pergunta">6.</span> Quais são as principais preocupações relacionadas à segurança e responsabilidade legal no contexto dos carros autônomos?
                 <div class="resposta">
-                    Uma das preocupações que deve ser levada em conta sobre os carros autônomos é que, por se tratar de uma tecnologia, possíveis invasões cibernéticas poderiam afetar e acarretar danos irreversíveis. Por exemplo, se em uma invasão ao sistema alguém tomasse o controle, isso poderia causar um acidente. Nesse caso, quem seria o responsável? Acreditamos que as ferramentas tecnológicas vieram para melhorar a qualidade de vida, mas ainda há muito a se pensar sobre quem seria responsável por possíveis erros. Há um longo caminho a percorrer na discussão dos impactos que os possíveis erros poderiam causar à sociedade e ponderar sobre quem seria os responsáveis para que esse meio não se torne uma "terra sem lei".
+                    Uma das preocupações que deve ser levada em conta sobre os carros autônomos é que, por se tratar de uma tecnologia, possíveis invasões cibernéticas poderiam afetar e acarretar danos irreversíveis. Por exemplo, se em uma invasão ao sistema "alguém" tomasse o controle e causasse um acidente, quem seria o responsável? Acreditamos que as ferramentas tecnológicas vieram para melhorar a qualidade de vida, mas ainda há muito a se pensar sobre quem seria o responsável por possíveis erros. Há um longo caminho a percorrer na discussão dos impactos que os erros poderiam causar à sociedade e ponderar assim quem seria o responsável para que esse meio não se torne "terra sem lei".
                 </div>
             </li>
             <li class="pergunta">
@@ -161,9 +161,12 @@
             </li>
             <li class="pergunta">
                 <span class="num-pergunta">9.</span> Como funciona o implante de melhoria visual para restaurar a visão parcial em pessoas cegas?
+                <div class="resposta">
+                    A tecnologia de melhoramento visual para recuperar parte da visão em pessoas cegas opera com uma câmera incorporada aos óculos, que captura imagens que são então enviadas para um computador ou unidade de processamento para análise detalhada dos dados visuais antes de serem transmitidos pelo córtex visual no cérebro do usuário deste dispositivo. O intuito é restaurar sua capacidade visual parcialmente perdida como resultado da cegueira adquirida ou congênita. Contudo, otimizar consideravelmente o desempenho do implante requer aumento no número de elétrons ativos, um cenário que enfrentará obstáculos técnicos significativos.
+                </div>
             </li>
             <li class="pergunta">
-                <span class="num-pergunta">10.</span> Quais são os desafios associados à melhoria da precisão dos implantes de melhoria visual?
+                <span class="num-pergunta">10.</span> Quais são os desafios associados à implementação de tecnologias de IA no sistema educacional?
             </li>
         </ol>
     </div>
