--- a/index.html
+++ b/index.html
@@ -131,9 +131,15 @@
             </li>
             <li class="pergunta">
                 <span class="num-pergunta">2.</span> Como os limpadores robóticos ilustram as aplicações práticas da IA no dia a dia?
+                <div class="resposta">
+                    A inteligência artificial nesses aparelhos se dá através de sensores que mapeiam os cômodos a fim de manobrar móveis ou evitar de sair da rota. Normalmente, limpadores robóticos estão conectados à aplicativos onde é possível controlá-los de qualquer lugar.
+                </div>
             </li>
             <li class="pergunta">
                 <span class="num-pergunta">3.</span> Quais tecnologias permitem que os carros autônomos operem de forma segura e eficiente?
+                <div class="resposta">
+                    As tecnologias que permitem que carros autônomos dirijam de forma segura são o sistema de GPS, o Sistema Global de Posicionamento, sensores de laser espacial, para saber o distanciamento do carro autônomo para outros possíveis objetos na pista, como outros carros, barreiras, pessoas, animais, etc, e o Wifi, que possibilita a comunicação de um carro com os outros.
+                </div>
             </li>
             <li class="pergunta">
                 <span class="num-pergunta">4.</span> Quais são os potenciais benefícios econômicos da adoção generalizada de carros autônomos?
