--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
             </li>
             <li class="pergunta">
                 <span class="num-pergunta">10.</span> Quais são os desafios associados à implementação de tecnologias de IA no sistema educacional?
+                <div class="resposta">
+                    O maior desafio para aprimorar a precisão dos implantes de melhoria visual é ampliar a quantidade de eletrodos ativos, essenciais para proporcionar uma visão mais detalhada. No entanto, esse processo enfrenta desafios técnicos consideráveis, pois adicionar mais eletrodos ao implante sem comprometer sua funcionalidade ou segurança pode ser complicado.
+                </div>
             </li>
         </ol>
     </div>
