--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade A3 - Inteligência Artificial e Tecnologia</title>
+    <title>Atividade - Inteligência Artificial e Tecnologia</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -113,7 +113,7 @@
         </div>
 
         <!-- Título Principal -->
-        <h1>Atividade A3 - Inteligência Artificial e Tecnologia</h1>
+        <h1>Atividade - Impact of emerging technologies - Artificial intelligence</h1>
 
         <!-- Instruções -->
         <div class="instrucoes">
