--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
             padding: 10px;
             border-radius: 5px;
         }
+
+        .riscar {
+            text-decoration: line-through;
+            color: #ff6f20; /* Opção de cor para destacar o texto riscado */
+        }
     </style>
 </head>
 <body>
@@ -159,22 +164,22 @@
                     Uma das preocupações que deve ser levada em conta sobre os carros autônomos é que, por se tratar de uma tecnologia, possíveis invasões cibernéticas poderiam afetar e acarretar danos irreversíveis. Por exemplo, se em uma invasão ao sistema "alguém" tomasse o controle e causasse um acidente, quem seria o responsável? Acreditamos que as ferramentas tecnológicas vieram para melhorar a qualidade de vida, mas ainda há muito a se pensar sobre quem seria o responsável por possíveis erros. Há um longo caminho a percorrer na discussão dos impactos que os erros poderiam causar à sociedade e ponderar assim quem seria o responsável para que esse meio não se torne "terra sem lei".
                 </div>
             </li>
-            <li class="pergunta">
+            <li class="pergunta riscar">
                 <span class="num-pergunta">7.</span> De que maneira a imagem holográfica melhora os procedimentos cirúrgicos?
             </li>
-            <li class="pergunta">
+            <li class="pergunta riscar">
                 <span class="num-pergunta">8.</span> Quais são as aplicações potenciais da imagem holográfica além da cirurgia?
             </li>
             <li class="pergunta">
-                <span class="num-pergunta">9.</span> Como funciona o implante de melhoria visual para restaurar a visão parcial em pessoas cegas?
+                <span class="num-pergunta">9.</span> Como a IA pode melhorar o diagnóstico e tratamento de doenças?
                 <div class="resposta">
-                    A tecnologia de melhoramento visual para recuperar parte da visão em pessoas cegas opera com uma câmera incorporada aos óculos, que captura imagens que são então enviadas para um computador ou unidade de processamento para análise detalhada dos dados visuais antes de serem transmitidos pelo córtex visual no cérebro do usuário deste dispositivo. O intuito é restaurar sua capacidade visual parcialmente perdida como resultado da cegueira adquirida ou congênita. Contudo, otimizar consideravelmente o desempenho do implante requer aumento no número de elétrons ativos, um cenário que enfrentará obstáculos técnicos significativos.
+                    A IA pode analisar grandes volumes de dados médicos, como histórico de pacientes e resultados de exames, para identificar padrões e fazer previsões. Isso pode levar a diagnósticos mais rápidos e precisos, além de personalizar tratamentos com base nas características individuais de cada paciente. A IA também pode ajudar médicos a decidir as melhores opções de tratamento, melhorando a qualidade do atendimento ao paciente.
                 </div>
             </li>
             <li class="pergunta">
-                <span class="num-pergunta">10.</span> Quais são os desafios associados à implementação de tecnologias de IA no sistema educacional?
+                <span class="num-pergunta">10.</span> Quais são os desafios éticos que a IA e as tecnologias emergentes apresentam na medicina?
                 <div class="resposta">
-                    O maior desafio para aprimorar a precisão dos implantes de melhoria visual é ampliar a quantidade de eletrodos ativos, essenciais para proporcionar uma visão mais detalhada. No entanto, esse processo enfrenta desafios técnicos consideráveis, pois adicionar mais eletrodos ao implante sem comprometer sua funcionalidade ou segurança pode ser complicado.
+                    Os desafios éticos incluem a privacidade dos dados dos pacientes, a transparência nos algoritmos usados para decisões médicas, o acesso equitativo à tecnologia e a responsabilidade em caso de erros. Além disso, é fundamental garantir que as decisões tomadas por sistemas de IA sejam compreensíveis e justas, evitando preconceitos que possam afetar o tratamento dos pacientes.
                 </div>
             </li>
         </ol>
